Updated Dates and Member Search

--- a/ChurchResourceManagerWeb/Views/Membership/MembersSearch.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/MembersSearch.cshtml
@@ -1,6 +1,10 @@
 ﻿<page-header page-title="Members Search"></page-header>
 
 <div ng-controller="membershipController as mc">
-    <members-grid open-edit-modal="mc.openEditMembershipModal(member)" get-member-search-data="mc.getMemberSearch()" members="mc.members" show-edit-delete="true"></members-grid>
+    <div ng-controller="membershipReportingController as mrc">
+        <reporting-tabs report-type="Membership" go-button="mrc.getMembership(searchType, startDate, endDate, familyId, memberId)" no-results-found="mrc.noResults" reset-tabs="mrc.reset()" invalid-report-type="mrc.invalidReportType"></reporting-tabs>
+        
+        <members-grid open-edit-modal="mc.openEditMembershipModal(member)" get-member-search-data="mc.getMemberSearch()" members="mrc.members" show-edit-delete="true"></members-grid>
+    </div>
 </div>
 
