--- a/ChurchResourceManagerWeb/Views/Offerings/_addOffering.cshtml
+++ b/ChurchResourceManagerWeb/Views/Offerings/_addOffering.cshtml
@@ -2,16 +2,13 @@
     <!--Date-->
     <div class="col-xs-10">
         <div class="form-group">
-            <input id="dateTxtBx"
-                   name="dateTxtBx"
-                   class="form-control"
-                   type="text"
-                   placeholder="Date (mm/dd/yyyy)"
-                   ng-model="aoc.Offering.OfferingDate"
-                   ui-mask="99/99/9999"
-                   ui-mask-placeholder
-                   model-view-value="true"
-                   required />
+            <p class="input-group">
+                <input id="dateTxtBx" name="dateTxtBx" type="text" class="form-control" ng-model="aoc.Offering.OfferingDate" uib-datepicker-popup="{{aoc.dateFormat}}" is-open="aoc.isOpenOfferingDate" ui-mask="99/99/9999" ui-mask-placeholder
+                       model-view-value="true" placeholder="Date (mm/dd/yyyy)" required />
+                <span class="input-group-btn">
+                    <button type="button" class="btn btn-default" ng-click="aoc.openOfferingDate()"><i class="glyphicon glyphicon-calendar"></i></button>
+                </span>
+            </p>
             <div class="help-block-error" ng-messages="aoc.addOfferingsForm.dateTxtBx.$error" ng-if="aoc.addOfferingsForm.dateTxtBx.$touched || aoc.addOfferingsForm.$submitted">
                 <div ng-messages-include="message-template"></div>
             </div>
