--- a/ChurchResourceManagerWeb/Views/Transactions/_submitTransaction.cshtml
+++ b/ChurchResourceManagerWeb/Views/Transactions/_submitTransaction.cshtml
@@ -22,16 +22,13 @@
             <!--Date-->
             <div class="form-group">
                 <label for="dateTxtBx">Date</label>
-                <input id="dateTxtBx"
-                       name="dateTxtBx"
-                       class="form-control"
-                       type="text"
-                       placeholder="Date (mm/dd/yyyy)"
-                       ng-model="stc.transaction.TransactionDate"
-                       ui-mask="99/99/9999"
-                       ui-mask-placeholder
-                       model-view-value="true"
-                       required />
+                <p class="input-group">
+                    <input id="dateTxtBx" name="dateTxtBx" type="text" class="form-control" ng-model="stc.transaction.TransactionDate" uib-datepicker-popup="{{stc.dateFormat}}" is-open="stc.isOpenTransactionDate" ui-mask="99/99/9999" ui-mask-placeholder
+                           model-view-value="true" placeholder="Date (mm/dd/yyyy)" required />
+                    <span class="input-group-btn">
+                        <button type="button" class="btn btn-default" ng-click="stc.openTransactionDate()"><i class="glyphicon glyphicon-calendar"></i></button>
+                    </span>
+                </p>
                 <div class="help-block-error" ng-messages="stc.transactionsForm.dateTxtBx.$error" ng-if="stc.transactionsForm.dateTxtBx.$touched || stc.transactionsForm.$submitted">
                     <div ng-messages-include="message-template"></div>
                 </div>
