--- a/ChurchResourceManagerWeb/Views/Offerings/OfferingsSearch.cshtml
+++ b/ChurchResourceManagerWeb/Views/Offerings/OfferingsSearch.cshtml
@@ -8,7 +8,7 @@
                        open-edit-modal="oc.openEditOfferingModal(offering, index)"
                        open-delete-modal="oc.openDeleteOfferingModal(offeringId)"
                        include-date-column="true"
-                       show-edit-delete="false">
+                       show-edit-delete="true">
     </offering-activity>
 </div>
 
