--- a/ChurchResourceManagerWeb/Views/Offerings/_offeringActivity.cshtml
+++ b/ChurchResourceManagerWeb/Views/Offerings/_offeringActivity.cshtml
@@ -5,12 +5,16 @@
                 <table class="table table-striped table-hover">
                     <thead>
                         <tr>
+                            <th width="10%">Offering Id</th>
                             <th ng-show="oac.includeDateColumn === 'true'">Date</th>
                             <th>Amount</th>
                             <th>Comments</th>
-                            <th  ng-show="tac.showEditDelete === 'true'" width="6%"></th> <!--empty space for edit/delete-->
+                            <th ng-show="oac.showEditDelete === 'true'" width="6%"></th> <!--empty space for edit/delete-->
                         </tr>
                         <tr class="list-group" id="searchRow" name="searchRow">
+                            <td>
+                                <input type="text" id="txtOfferingId" name="txtOfferingId" class="form-control" ng-model="search.OfferingId" />
+                            </td>
                             <td ng-show="oac.includeDateColumn === 'true'">
                                 <input type="text" id="txtDate" name="txtDate" class="form-control" ng-model="search.OfferingDate" />
                             </td>
@@ -24,10 +28,11 @@
                     </thead>
                     <tbody>
                         <tr class="text-left" ng-repeat="offering in oac.offeringActivity | filter: search">
+                            <td>{{offering.OfferingId}}</td>
                             <td ng-show="oac.includeDateColumn === 'true'">{{offering.OfferingDate}}</td>
                             <td>{{offering.OfferingAmount | currency}}</td>
                             <td>{{offering.Comments}}</td>
-                            <td  ng-show="tac.showEditDelete === 'true'">
+                            <td ng-show="oac.showEditDelete === 'true'">
                                 <span ng-click="oac.editOffering(offering, $index)" uib-tooltip="Click to Edit" class="glyphicon glyphicon-pencil clickable"></span>
                                 |
                                 <span ng-click="oac.deleteOffering(offering.OfferingId)" uib-tooltip="Click to Delete" class="glyphicon glyphicon-remove clickable"></span>
