--- a/ChurchResourceManagerWeb/Views/Transactions/_editTransactionModal.cshtml
+++ b/ChurchResourceManagerWeb/Views/Transactions/_editTransactionModal.cshtml
@@ -5,7 +5,7 @@
 <div class="modal-body">
     <div class="row">
         <div class="col-xs-10">
-            <submit-transaction transaction="etc.transaction" on-submit="etc.doSave(transaction)" , on-clear-form="etc.doClearForm(form)" enums="etc.enums"></submit-transaction>
+            <submit-transaction transaction="etc.transaction" on-submit="etc.doSave(transaction)" on-clear-form="etc.doClearForm(form)" enums="etc.enums"></submit-transaction>
         </div>
     </div>
 </div>
