--- a/ChurchResourceManagerWeb/Views/Transactions/_deleteTransactionModal.cshtml
+++ b/ChurchResourceManagerWeb/Views/Transactions/_deleteTransactionModal.cshtml
@@ -1,4 +1,5 @@
-﻿<!--header-->
+﻿Yo
+@*<!--header-->
 <div class="modal-header">
     <button type="button" class="close" ng-click="dtc.dismiss()">&times;</button>
     <h4>Delete Transaction</h4>
@@ -11,4 +12,4 @@
 <div class="modal-footer">
     <button class="btn btn-danger" type="submit" ng-click="dtc.deleteTransaction()">Delete</button>
     <button class="btn btn-info" type="button" ng-click="dtc.closeModal()">Cancel</button>
-</div>
+</div>*@
