--- a/ChurchResourceManagerWeb/Views/Reporting/TransactionsReport.cshtml
+++ b/ChurchResourceManagerWeb/Views/Reporting/TransactionsReport.cshtml
@@ -4,7 +4,9 @@
     <div class="col-md-12">
         <div ng-controller="transactionsReportingController as trc">
             <div class="col-md-12">
-                <reporting-tabs report-type="Transaction" go-button="trc.getTransactions(searchType, startDate, endDate, familyId, memberId)" no-results-found="trc.noResults" reset-tabs="trc.reset()"></reporting-tabs>
+                <reporting-tabs report-type="Transaction" go-button="trc.getTransactions(searchType, startDate, endDate, familyId, memberId)"
+                                no-results-found="trc.noResults" reset-tabs="trc.reset()" selected-search-type="TransactionDate">
+                </reporting-tabs>
             </div>
 
             <running-totals ng-hide="trc.noResults" running-total="trc.runningTotal"></running-totals>
