Removed show edit delete

--- a/ChurchResourceManagerWeb/Views/Reporting/DonationReport.cshtml
+++ b/ChurchResourceManagerWeb/Views/Reporting/DonationReport.cshtml
@@ -11,7 +11,7 @@
                 <donation-activity panel-settings="drc.donationActivityPanelSettings"
                                    donation-activity="drc.donationActivity"
                                    include-date-column="true"
-                                   show-edit-delete="true">
+                                   show-edit-delete="false">
                 </donation-activity>
             </div>
         </div>
