Added Financial Summary

--- a/ChurchResourceManagerWeb/Views/Shared/_NavBar.cshtml
+++ b/ChurchResourceManagerWeb/Views/Shared/_NavBar.cshtml
@@ -118,16 +118,19 @@
                                 <a ng-class="{'active': hc.checkActive('MembershipReport')}" ng-href="/Reporting/MembershipReport">Membership</a>
                             </li>
                             <li>
-                                <a ng-class="{'active': hc.checkActive('TithingReport')}" ng-href="/Reporting/TithingReport">Tithing</a>
+                                <a ng-class="{'active': hc.checkActive('TithingReport')}" ng-href="/Reporting/TithingReport">Tithes</a>
                             </li>
                             <li>
-                                <a ng-class="{'active': hc.checkActive('OfferingReport')}" ng-href="/Reporting/OfferingReport">Offering</a>
+                                <a ng-class="{'active': hc.checkActive('OfferingReport')}" ng-href="/Reporting/OfferingReport">Offerings</a>
                             </li>
                             <li>
-                                <a ng-class="{'active': hc.checkActive('DonationReport')}" ng-href="/Reporting/DonationReport">Donation</a>
+                                <a ng-class="{'active': hc.checkActive('DonationReport')}" ng-href="/Reporting/DonationReport">Donations</a>
                             </li>
                             <li>
                                 <a ng-class="{'active': hc.checkActive('Transactions')}" ng-href="/Reporting/TransactionsReport">Transactions</a>
+                            </li>
+                            <li>
+                                <a ng-class="{'active': hc.checkActive('FinancialSummary')}" ng-href="/Reporting/FinancialSummary">Financial Summary</a>
                             </li>
                         </ul>
                     </li>
