--- a/ChurchResourceManagerWeb/Views/Shared/_runningTotals.cshtml
+++ b/ChurchResourceManagerWeb/Views/Shared/_runningTotals.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="row">
-    <div class="col-xs-2">
+    <div class="col-xs-3">
         <div class="panel panel-default">
             <div class="panel-heading">
                 <div class="row">
@@ -7,7 +7,7 @@
                         <i class="fas fa-money-bill-alt fa-4x text-success"></i>
                     </div>
                     <div class="col-xs-9 text-center text-success">
-                        <div style="font-size: 30px;">Totals</div>
+                        <div style="font-size: 30px;">{{rtc.title}} Totals</div>
                         <div style="font-size: 30px;">
                             {{rtc.runningTotal.data | currency}}
                         </div>
