--- a/ChurchResourceManagerWeb/Views/Offerings/AddOfferings.cshtml
+++ b/ChurchResourceManagerWeb/Views/Offerings/AddOfferings.cshtml
@@ -2,7 +2,7 @@
 
 <div ng-controller="offeringController as oc">
         <div class="row">
-            <div class="col-xs-5">
+            <div class="col-md-5">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         Add Offerings
@@ -12,7 +12,7 @@
                     </div>
                 </div>
             </div>
-            <running-totals running-total="oc.runningTotal" offering-activity="oc.offeringActivity" ></running-totals>
+            <running-totals running-total="oc.runningTotal" offering-activity="oc.offeringActivity" title="Offering" ></running-totals>
         </div>
 
     <!--Offering Activity-->
