--- a/ChurchResourceManagerWeb/Views/Shared/_runningTotals.cshtml
+++ b/ChurchResourceManagerWeb/Views/Shared/_runningTotals.cshtml
@@ -1,16 +1,14 @@
 ﻿<div class="row">
-    <div class="col-xs-3">
+    <div class=" col-lg-3 col-md-6">
         <div class="panel panel-default">
             <div class="panel-heading">
                 <div class="row">
-                    <div class="col-xs-3">
+                    <div class="col-md-3">
                         <i class="fas fa-money-bill-alt fa-4x text-success"></i>
                     </div>
-                    <div class="col-xs-9 text-center text-success">
-                        <div style="font-size: 30px;">{{rtc.title}} Totals</div>
-                        <div style="font-size: 30px;">
-                            {{rtc.runningTotal.data | currency}}
-                        </div>
+                    <div class="col-md-9 text-success text-right">
+                        <div class="huge">{{rtc.title}} Totals</div>
+                        <div class="huge">{{rtc.runningTotal.data | currency}}</div>
                     </div>
                 </div>
             </div>
