Added Delete Transaction

--- a/ChurchResourceManagerWeb/Views/Transactions/_deleteTransactionModal.cshtml
+++ b/ChurchResourceManagerWeb/Views/Transactions/_deleteTransactionModal.cshtml
@@ -1,5 +1,4 @@
-﻿Yo
-@*<!--header-->
+﻿<!--header-->
 <div class="modal-header">
     <button type="button" class="close" ng-click="dtc.dismiss()">&times;</button>
     <h4>Delete Transaction</h4>
@@ -12,4 +11,4 @@
 <div class="modal-footer">
     <button class="btn btn-danger" type="submit" ng-click="dtc.deleteTransaction()">Delete</button>
     <button class="btn btn-info" type="button" ng-click="dtc.closeModal()">Cancel</button>
-</div>*@
+</div>
