Made sizing updates

--- a/ChurchResourceManagerWeb/Views/Dashboard/_dashboard.cshtml
+++ b/ChurchResourceManagerWeb/Views/Dashboard/_dashboard.cshtml
@@ -6,16 +6,16 @@
 
 <div class="row">
     <!--Membership Tile-->
-    <div class="col-lg-3 col-md-6">
+    <div class="col-md-6 col-lg-4">
         <div class="panel panel-primary">
             <div class="panel-heading">
                 <div class="row">
                     <div class="col-xs-3">
-                        <i class="fa fa-users fa-5x"></i>
+                        <i class="fa fa-users fa-4x"></i>
                     </div>
                     <div class="col-xs-9 text-right">
-                        <div class="huge">{{dc.memberCounts}}</div>
                         <div>Members</div>
+                        <div class="huge">{{dc.memberCounts}}</div>
                     </div>
                 </div>
             </div>
@@ -30,16 +30,16 @@
     </div>
 
     <!--Tithes Tile-->
-    <div class="col-lg-3 col-md-6">
+    <div class="col-md-6 col-lg-4">
         <div class="panel panel-green">
             <div class="panel-heading">
                 <div class="row">
                     <div class="col-xs-3">
-                        <i class="fas fa-money-bill-alt fa-5x"></i>
+                        <i class="fas fa-hand-holding-usd fa-4x"></i>
                     </div>
                     <div class="col-xs-9 text-right">
-                        <div class="huge">{{dc.tithesSum | currency}}</div>
                         <div>Total Tithes Today</div>
+                        <div class="huge">{{dc.tithesSum | currency}}</div>
                     </div>
                 </div>
             </div>
@@ -54,16 +54,16 @@
     </div>
 
     <!--Offerings Tile-->
-    <div class="col-lg-3 col-md-6">
+    <div class="col-md-6 col-lg-4">
         <div class="panel panel-yellow">
             <div class="panel-heading">
                 <div class="row">
                     <div class="col-xs-3">
-                        <i class="fas fa-dollar-sign fa-5x"></i>
+                        <i class="fas fa-dollar-sign fa-4x"></i>
                     </div>
                     <div class="col-xs-9 text-right">
-                        <div class="huge">{{dc.offeringsSum | currency}}</div>
                         <div>Total Offerings Today</div>
+                        <div class="huge">{{dc.offeringsSum | currency}}</div>
                     </div>
                 </div>
             </div>
@@ -77,16 +77,16 @@
         </div>
     </div>
 
-    <div class="col-lg-3 col-md-6">
+    <div class="col-md-6 col-lg-4">
         <div class="panel panel-red">
             <div class="panel-heading">
                 <div class="row">
                     <div class="col-xs-3">
-                        <i class="fas fa-university fa-5x"></i>
+                        <i class="fas fa-university fa-4x"></i>
                     </div>
                     <div class="col-xs-9 text-right">
-                        <div class="huge">{{dc.expensesSum | currency}}</div>
                         <div>Expenses Today</div>
+                        <div class="huge">{{dc.expensesSum | currency}}</div>
                     </div>
                 </div>
             </div>
