--- a/ChurchResourceManagerWeb/Views/Shared/_membershipStatCards.cshtml
+++ b/ChurchResourceManagerWeb/Views/Shared/_membershipStatCards.cshtml
@@ -1,12 +1,12 @@
 ﻿<div class="row" ng-hide="mscc.noResultsFound">
-    <div class="col-lg-2 col-md-4">
+    <div class="col-lg-3 col-md-6">
         <div class="panel panel-default">
             <div class="panel-heading">
                 <div class="row">
                     <div class="col-xs-3">
                         <i class="fa fa-users fa-3x"></i>
                     </div>
-                    <div class="col-xs-9 text-center">
+                    <div class="col-xs-9 text-right">
                         <div>Member Count</div>
                         <div class="huge">{{mscc.totalCount}}</div>
                     </div>
@@ -15,14 +15,14 @@
         </div>
     </div>
 
-    <div class="col-lg-2 col-md-4">
+    <div class="col-lg-3 col-md-6">
         <div class="panel panel-default">
             <div class="panel-heading">
                 <div class="row">
                     <div class="col-xs-3">
                         <i class="fa fa-users fa-3x"></i>
                     </div>
-                    <div class="col-xs-9 text-center">
+                    <div class="col-xs-9 text-right">
                         <div>Active Count</div>
                         <div class="huge">{{mscc.activeCount}}</div>
                     </div>
@@ -31,14 +31,14 @@
         </div>
     </div>
 
-    <div class="col-lg-2 col-md-4">
+    <div class="col-lg-3 col-md-6">
         <div class="panel panel-default">
             <div class="panel-heading">
                 <div class="row">
                     <div class="col-xs-3">
                         <i class="fa fa-users fa-3x"></i>
                     </div>
-                    <div class="col-xs-9 text-center">
+                    <div class="col-xs-9 text-right">
                         <div>Terminated Count</div>
                         <div class="huge">{{mscc.terminatedCount}}</div>
                     </div>
