--- a/ChurchResourceManagerWeb/Views/Shared/_NavBar.cshtml
+++ b/ChurchResourceManagerWeb/Views/Shared/_NavBar.cshtml
@@ -54,7 +54,7 @@
                     </li>
                     <li ng-click="hc.activateDeactivateParent('ManageTithes')">
                         <a ng-href="#">
-                            <i class="fas fa-money-bill-alt fa-fw"></i>
+                            <i class="fas fa-hand-holding-usd fa-fw"></i>
                             Manage Tithes<span class="arrow" ng-class="{'fa fa-angle-down': hc.isActiveParentNav('ManageTithes'), 'fa fa-angle-left': !hc.isActiveParentNav('ManageTithes')}"></span>
                         </a>
                         <ul ng-show="hc.openCloseNav('Tithing/') || hc.isActiveParentNav('ManageTithes')" class="nav nav-second-level">
