--- a/ChurchResourceManagerWeb/Views/Shared/_runningTotals.cshtml
+++ b/ChurchResourceManagerWeb/Views/Shared/_runningTotals.cshtml
@@ -1,13 +1,13 @@
 ﻿<div class="row">
-    <div class=" col-lg-3 col-md-6">
+    <div class="col-md-4">
         <div class="panel panel-default">
             <div class="panel-heading">
                 <div class="row">
                     <div class="col-md-3">
-                        <i class="fas fa-money-bill-alt fa-4x text-success"></i>
+                        <i class="fas fa-hand-holding-usd fa-4x text-success"></i>
                     </div>
-                    <div class="col-md-9 text-success text-right">
-                        <div class="huge">{{rtc.title}} Totals</div>
+                    <div class="col-md-9 text-success text-center">
+                        <div>{{rtc.title}} Totals</div>
                         <div class="huge">{{rtc.runningTotal.data | currency}}</div>
                     </div>
                 </div>
